# finpulse

./: .gitignore  README.md  demo-report.html  pyproject.toml
finpulse/: ai.py  analyzer.py  cli.py  demo.py  display.py  fetcher.py  html_report.py
